Add HTTPS support with Let's Encrypt for lab.dogbank.com
- Configure Traefik with Let's Encrypt auto-renewal
- Update CORS in all modules to support https://lab.dogbank.com
- Add complete HTTPS deployment manifests
- Add Route53 DNS setup documentation
- HTTP to HTTPS automatic redirect

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>