@@ -17,27 +17,31 @@ public class CorsConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        
-        // SOLUÇÃO: Usar originPatterns em vez de origins para permitir qualquer origem
-        configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowCredentials(false); // Importante: false quando usar "*"
-        
+
+        // Origins permitidas - domínio HTTPS
+        configuration.setAllowedOrigins(Arrays.asList(
+            "http://localhost:3000",
+            "https://lab.dogbank.com",
+            "http://lab.dogbank.com"
+        ));
+        configuration.setAllowCredentials(false);
+
         // Métodos permitidos
         configuration.setAllowedMethods(Arrays.asList(
             "GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD", "PATCH"
         ));
-        
+
         // Headers permitidos
         configuration.setAllowedHeaders(List.of("*"));
-        
+
         // Headers expostos
         configuration.setExposedHeaders(Arrays.asList(
             "Authorization", "Cache-Control", "Content-Type"
         ));
-        
+
         // Tempo de cache para preflight
         configuration.setMaxAge(3600L);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
